Added CsvReaderUtil for reading Csv files, organised a testing environment and structure for how writing works.